--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "react-front-back-end-template",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
+    "main": "app.js",
     "scripts": {
         "start": "concurrently \"npm run server\" \"npm run client\"",
         "server": "cd backend && npm start",
