--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,12 +19,12 @@
         "web-vitals": "^2.1.4"
     },
     "scripts": {
-        "start": "react-scripts start",
+        "start": "react-scripts --openssl-legacy-provider start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
-    "proxy": "http://localhost:5000",
+    "proxy": "http://localhost:8080",
     "eslintConfig": {
         "extends": [
             "react-app",
