--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,14 +9,16 @@
         "@testing-library/user-event": "^13.5.0",
         "axios": "^1.7.2",
         "bootstrap": "^5.3.3",
+        "formik": "^2.4.6",
         "immer": "^10.1.1",
         "react": "^18.3.1",
         "react-bootstrap": "^2.10.2",
         "react-dom": "^18.3.1",
         "react-router-dom": "^6.23.1",
-        "react-scripts": "5.0.1",
+        "react-scripts": "^5.0.1",
         "use-immer": "^0.10.0",
-        "web-vitals": "^2.1.4"
+        "web-vitals": "^2.1.4",
+        "yup": "^1.4.0"
     },
     "scripts": {
         "start": "react-scripts --openssl-legacy-provider start",
