--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
         "axios": "^1.7.2",
         "bootstrap": "^5.3.3",
         "formik": "^2.4.6",
+        "html-react-parser": "^5.1.10",
         "immer": "^10.1.1",
+        "jodit-react": "^4.1.2",
         "react": "^18.3.1",
         "react-bootstrap": "^2.10.2",
         "react-dom": "^18.3.1",
