--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
     "version": "1.0.0",
     "description": "",
     "main": "app.js",
+    "type": "module",
     "scripts": {
         "start": "nodemon app",
         "watch": "nodemon app"
@@ -11,10 +12,12 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "bcrypt": "^5.1.1",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
-        "nodemailer": "^6.9.14"
+        "jsonwebtoken": "^9.0.2",
+        "mysql2": "^3.10.2"
     },
     "devDependencies": {
         "nodemon": "^3.1.3"
