--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
         "@testing-library/user-event": "^13.5.0",
         "axios": "^1.7.2",
         "bootstrap": "^5.3.3",
+        "cropperjs": "^1.6.2",
         "dotenv": "^16.4.5",
         "formik": "^2.4.6",
         "html-react-parser": "^5.1.10",
