--- a/backend/.env
+++ b/backend/.env
@@ -4,7 +4,7 @@ DB_PORT=3306
 DB_DATABASE='crm'
 DB_USER='appusercrmadmin'
 DB_PASSWORD='@m.YFDS]c2rkU9MQ'
-CLOUDINARY_NAME='crmapp'
+CLOUDINARY_CLOUD_NAME='crmapp'
 CLOUDINARY_API_KEY='778763934991892'
 CLOUDINARY_API_SECRET='bPPu6qPoKNgRwLZmRYWjLqzXBgo'
 
