--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,9 @@
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "jsonwebtoken": "^9.0.2",
-        "mysql2": "^3.10.2"
+        "multer": "^1.4.5-lts.1",
+        "mysql2": "^3.10.2",
+        "sharp": "^0.33.4"
     },
     "devDependencies": {
         "nodemon": "^3.1.3"
