--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     },
     "dependencies": {
         "formik": "^2.4.6",
+        "react-dnd": "^16.0.1",
+        "react-dnd-html5-backend": "^16.0.1",
         "yup": "^1.4.0"
     }
 }
