--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
         "express": "^4.19.2",
         "express-fileupload": "^1.5.1",
         "jsonwebtoken": "^9.0.2",
+        "moment-timezone": "^0.5.45",
         "multer": "^1.4.5-lts.1",
         "mysql2": "^3.10.2",
         "sharp": "^0.33.4"
