--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
         "axios": "^1.7.2",
         "bootstrap": "^5.3.3",
         "cropperjs": "^1.6.2",
+        "crypto-js": "^4.2.0",
         "dotenv": "^16.4.5",
         "formik": "^2.4.6",
         "html-react-parser": "^5.1.10",
