--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,8 @@
         "jodit-react": "^4.1.2",
         "react": "^18.3.1",
         "react-bootstrap": "^2.10.2",
+        "react-dnd": "^16.0.1",
+        "react-dnd-html5-backend": "^16.0.1",
         "react-dom": "^18.3.1",
         "react-icons": "^5.2.1",
         "react-router-dom": "^6.23.1",
