--- a/backend/.env
+++ b/backend/.env
@@ -1,9 +1,11 @@
 PORT=3000
-DB_HOST=127.0.0.1
+DB_HOST=104.200.137.56
+# DB_HOST=104.200.137.56
 DB_PORT=3306
 DB_DATABASE='crm'
 DB_USER='appusercrmadmin'
-DB_PASSWORD='appusercrmadmin'
+DB_PASSWORD='@m.YFDS]c2rkU9MQ'
+#DB_PASSWORD='appusercrmadmin'
 CLOUDINARY_CLOUD_NAME='ddhxa9igj'
 CLOUDINARY_API_KEY='778763934991892'
 CLOUDINARY_API_SECRET='bPPu6qPoKNgRwLZmRYWjLqzXBgo'
