--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,4 @@
-REACT_APP_API_URL=http://localhost:3000/api
+# REACT_APP_API_URL=http://localhost:3000/api
+REACT_APP_API_URL=https://api.hostregio.app
 REACT_APP_APP_EMPRESA_ID=1
 REACT_APP_SECRET_KEY=parangacutirimiricuaro
