--- a/backend/.env
+++ b/backend/.env
@@ -9,4 +9,5 @@ DB_PASSWORD='@m.YFDS]c2rkU9MQ'
 CLOUDINARY_CLOUD_NAME='ddhxa9igj'
 CLOUDINARY_API_KEY='778763934991892'
 CLOUDINARY_API_SECRET='bPPu6qPoKNgRwLZmRYWjLqzXBgo'
+FRONT_APP_SECRET_KEY=parangacutirimiricuaror
 
