--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
-        "axios": "^1.7.2",
+        "axios": "^1.7.9",
         "bootstrap": "^5.3.3",
         "cropperjs": "^1.6.2",
         "cross-env": "^7.0.3",
@@ -56,6 +56,17 @@
         ]
     },
     "devDependencies": {
-        "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+        "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+        "assert": "^2.1.0",
+        "buffer": "^6.0.3",
+        "crypto-browserify": "^3.12.1",
+        "customize-cra": "^1.0.0",
+        "https-browserify": "^1.0.0",
+        "node-polyfill-webpack-plugin": "^4.1.0",
+        "os-browserify": "^0.3.0",
+        "react-app-rewired": "^2.2.1",
+        "stream-browserify": "^3.0.0",
+        "stream-http": "^3.2.0",
+        "url": "^0.11.4"
     }
 }
