--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
         "cropperjs": "^1.6.2",
         "cross-env": "^7.0.3",
         "crypto-js": "^4.2.0",
+        "date-fns": "^4.1.0",
         "dotenv": "^16.4.5",
         "formik": "^2.4.6",
         "html-react-parser": "^5.1.10",
@@ -20,6 +21,7 @@
         "react": "^18.3.1",
         "react-bootstrap": "^2.10.2",
         "react-calendar": "^5.1.0",
+        "react-datepicker": "^8.1.0",
         "react-dnd": "^16.0.1",
         "react-dnd-html5-backend": "^16.0.1",
         "react-dom": "^18.3.1",
