--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,9 @@ build
 
 # IDE files
 .vscode
+
+# BackUp .env
+/backend/.env
+
+# Ignore package-lock.json in frontend
+/frontend/package-lock.json
