--- a/backend/.env
+++ b/backend/.env
@@ -1,11 +1,11 @@
 PORT=3002
-DB_HOST=127.0.0.1
-#DB_HOST=206.130.120.129
+#DB_HOST=127.0.0.1
+DB_HOST=206.130.120.129
 DB_PORT=3306
 DB_DATABASE='crm'
-DB_USER='root'
-#DB_USER='appusercrmadmin'
-#DB_PASSWORD='@m.YFDS]c2rkU9MQ'
+#DB_USER='root'
+DB_USER='appusercrmadmin'
+DB_PASSWORD='@m.#YFDS]c2rkU9MQ'
 #DB_PASSWORD='appusercrmadmin'
 CLOUDINARY_CLOUD_NAME='ddhxa9igj'
 CLOUDINARY_API_KEY='778763934991892'
