--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@ build
 
 # Ignore package-lock.json in frontend
 /frontend/package-lock.json
-backend/.env
+/frontend/.env
 
 # Mac files
 .DS_Store
