--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
         "html-react-parser": "^5.1.10",
         "immer": "^10.1.1",
         "jodit-react": "^4.1.2",
+        "jwt-decode": "^4.0.0",
         "react": "^18.3.1",
         "react-bootstrap": "^2.10.2",
         "react-calendar": "^5.1.0",
