Agregar archivo .env para configuración de entorno y actualizar .gitignore para ignorar el archivo .env en el backend

--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@ backend/node_modules
 .vscode
 
 # BackUp .env
-/backend/.env
+#/backend/.env
 
 # Ignore package-lock.json in frontend
 /frontend/package-lock.json
