--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ npm-debug.log*
 
 # Dependency directories
 frontend/node_modules
-backend/node_modules
+#backend/node_modules
 
 # Build outputs
 # dist
