Agregar configuración de entorno en .env y actualizar .gitignore para incluirlo; actualizar archivos de construcción y cambiar referencias a archivos JS en index.html y asset-manifest.json.

--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ frontend/node_modules
 # Ignore package-lock.json in frontend
 /frontend/package-lock.json
 # /frontend/package.json
-/frontend/.env
+#/frontend/.env
 
 # Mac files
 .DS_Store
