Actualizar configuración de entorno en archivos .env para producción y desarrollo; ajustar lógica de hostname en App.js; mejorar manejo de errores en Agenda.js

--- a/backend/.env
+++ b/backend/.env
@@ -1,12 +1,22 @@
 PORT=3002
-DB_HOST=127.0.0.1
-;DB_HOST=206.130.120.129
 DB_PORT=3306
 DB_DATABASE='crm'
-DB_USER='root'
-;DB_USER='appusercrmadmin'
-;DB_PASSWORD='@m.YFDS]c2rkU9MQ'
-;DB_PASSWORD='appusercrmadmin'
+#
+# Local development si el acceso a los datos es por la db local
+#
+;DB_HOST=127.0.0.1
+;##DB_USER='root'
+;;DB_PASSWORD='appusercrmadmin'  #si es local no se usa
+#
+# Production si el acceso a los datos es por el endpoint
+#
+DB_HOST=localhost
+DB_USER='appusercrmadmin'
+DB_PASSWORD='@m.YFDS]c2rkU9MQ'
+;DB_HOST=206.130.120.129 #no se usa
+#
+# cloudinary
+#
 CLOUDINARY_CLOUD_NAME='ddhxa9igj'
 CLOUDINARY_API_KEY='778763934991892'
 CLOUDINARY_API_SECRET='bPPu6qPoKNgRwLZmRYWjLqzXBgo'
