--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,11 @@
-REACT_APP_API_URL=http://localhost:3002/api
-# REACT_APP_API_URL=https://api.hostregio.app/api
+#
+# Local development si el acceso a los datos es por la db local
+∫#
+;REACT_APP_API_URL=http://localhost:3002/api
+#
+# Production si el acceso a los datos es por el endpoint
+#
+REACT_APP_API_URL=https://api.hostregio.app/api
+#
 REACT_APP_APP_EMPRESA_ID=1
 REACT_APP_SECRET_KEY=parangacutirimiricuaror
