Actualizar archivos .env para mejorar la configuración de desarrollo y producción; comentar líneas no utilizadas

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,7 +1,7 @@
 #
 # Local development si el acceso a los datos es por la db local
-∫#
-;REACT_APP_API_URL=http://localhost:3002/api
+#
+#REACT_APP_API_URL=http://localhost:3002/api
 #
 # Production si el acceso a los datos es por el endpoint
 #
