--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,4 @@
+REACT_APP_HOSTNAME_TESTING=herbolaria.hostregio.app
 #
 # Local development si el acceso a los datos es por la db local
 #
@@ -9,3 +10,21 @@ REACT_APP_API_URL=https://api.hostregio.app/api
 #
 REACT_APP_APP_EMPRESA_ID=1
 REACT_APP_SECRET_KEY=parangacutirimiricuaror
+#REACT_APP_APP_NAME=HostRegio
+#REACT_APP_APP_VERSION=1.0.0
+#REACT_APP_APP_VERSION_NAME=Alpha
+#REACT_APP_APP_VERSION_CODE=1
+#REACT_APP_APP_VERSION_BUILD=1
+#REACT_APP_APP_VERSION_BUILD_DATE=2023-10-01
+#REACT_APP_APP_VERSION_BUILD_TIME=12:00:00
+#REACT_APP_APP_VERSION_BUILD_USER=admin
+#REACT_APP_APP_VERSION_BUILD_HOST=localhost
+#REACT_APP_APP_VERSION_BUILD_HOSTNAME=localhost
+#REACT_APP_APP_VERSION_BUILD_OS=Linux
+#REACT_APP_APP_VERSION_BUILD_OS_VERSION=5.4.0-42-generic
+#REACT_APP_APP_VERSION_BUILD_OS_ARCH=x86_64
+#REACT_APP_APP_VERSION_BUILD_OS_NAME=Ubuntu
+#REACT_APP_APP_VERSION_BUILD_OS_ID=ubuntu
+#REACT_APP_APP_VERSION_BUILD_OS_ID_LIKE=debian
+#REACT_APP_APP_VERSION_BUILD_OS_PRETTY_NAME=Ubuntu 20.04.3 LTS
+#REACT_APP_APP_VERSION_BUILD_OS_VERSION_ID=20.04
