Actualizar configuraciones de entorno en archivos .env; ajustar lógica de acceso a la base de datos y hostname en varios controladores; limpiar código comentado en componentes de frontend.

--- a/backend/.env
+++ b/backend/.env
@@ -10,10 +10,10 @@ DB_DATABASE='crm'
 #
 # Production si el acceso a los datos es por el endpoint
 #
-DB_HOST=localhost
+DB_HOST=localhost #cuando se esta accessando a la db local. NOTA: Cuando se publique se debe de tomar este parámetro
 DB_USER='appusercrmadmin'
 DB_PASSWORD='@m.YFDS]c2rkU9MQ'
-##DB_HOST=206.130.120.129 #no se usa
+#DB_HOST=206.130.120.129 #cuando se esta accessando a la db remota desde PC local
 #
 # cloudinary
 #
