Actualizar configuraciones de entorno para desarrollo local; ajustar lógica de acceso a la base de datos y limpiar código comentado en varios archivos; implementar visibilidad de contraseña en el componente LoggedIn.

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,13 +1,13 @@
-REACT_APP_HOSTNAME_TESTING=herbolaria.hostregio.app
-#REACT_APP_HOSTNAME_TESTING=localhost
+#REACT_APP_HOSTNAME_TESTING=herbolaria.hostregio.app
+REACT_APP_HOSTNAME_TESTING=localhost
 #
 # Local development si el acceso a los datos es por la db local
 #
-#REACT_APP_API_URL=http://localhost:3002/api
+REACT_APP_API_URL=http://localhost:3002/api
 #
 # Production si el acceso a los datos es por el endpoint
 #
-REACT_APP_API_URL=https://api.hostregio.app/api
+#REACT_APP_API_URL=https://api.hostregio.app/api
 #
 REACT_APP_APP_EMPRESA_ID=1
 REACT_APP_SECRET_KEY=parangacutirimiricuaror
