Actualizar configuraciones de entorno; modificar hostname para producción y agregar contexto de estado en el componente Cotizar.

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,5 @@
-REACT_APP_HOSTNAME_TESTING=herbolaria.hostregio.app
+#REACT_APP_HOSTNAME_TESTING=herbolaria.hostregio.app
+REACT_APP_HOSTNAME_TESTING=nir.hostregio.app
 #RSEACT_APP_HOSTNAME_TESTING=localhost
 #
 # Local development si el acceso a los datos es por la db local
