Actualizar configuraciones de entorno; agregar autenticación de token en rutas de compras e inventario; optimizar solicitudes Axios en componentes y mejorar manejo de estado.

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,5 +1,5 @@
-REACT_APP_HOSTNAME_TESTING=herbolaria.hostregio.app
-#RSEACT_APP_HOSTNAME_TESTING=localhost
+#REACT_APP_HOSTNAME_TESTING=herbolaria.hostregio.app
+RSEACT_APP_HOSTNAME_TESTING=localhost
 #
 # Local development si el acceso a los datos es por la db local
 #
