Refactor API calls to use axiosInstance; update environment variables for local development; add modal for placing orders in Cotizar component.

--- a/backend/.env
+++ b/backend/.env
@@ -4,16 +4,16 @@ DB_DATABASE='crm'
 ###
 ### Local development si el acceso a los datos es por la db local
 ###
-#DB_HOST=127.0.0.1
-#DB_USER='root'
+DB_HOST=127.0.0.1
+DB_USER='root'
 ## DB_PASSWORD='appusercrmadmin'  #si es local no se usa
 #
 # Production si el acceso a los datos es por el endpoint
 #
-DB_HOST=localhost #cuando se esta accessando a la db local. NOTA: Cuando se publique se debe de tomar este parámetro
-DB_USER='appusercrmadmin'
-DB_PASSWORD='@m.YFDS]c2rkU9MQ'
-#DB_HOST=206.130.120.129 #cuando se esta accessando a la db remota desde PC local
+#DB_HOST=localhost #cuando se esta accessando a la db local. NOTA: Cuando se publique se debe de tomar este parámetro
+#DB_USER='appusercrmadmin'
+#DB_PASSWORD='@m.YFDS]c2rkU9MQ'
+##DB_HOST=206.130.120.129 #cuando se esta accessando a la db remota desde PC local
 #
 # cloudinary
 #
