--- a/frontend/.env
+++ b/frontend/.env
@@ -1,17 +1,18 @@
 ### Indica si el ambiente en el front end es desarrollo o producción
 ### true si es desarrollo y false si es producción
-REACT_APP_AMBIENTE_DESARROLLO=false
+REACT_APP_AMBIENTE_DESARROLLO=true
 ### Indica el sitio con el que se va a estar haciendo pruebas en forma local o desarrollo
-REACT_APP_HOSTNAME_TESTING=herbolaria.hostregio.app
+REACT_APP_HOSTNAME_TESTING=nir.hostregio.app
+#REACT_APP_HOSTNAME_TESTING=herbolaria.hostregio.app
 #REACT_APP_HOSTNAME_TESTING=localhost
 ###
 ### Local development si el acceso a los datos es por la db local
 ###
-#REACT_APP_API_URL=http://localhost:3002/api
+REACT_APP_API_URL=http://localhost:3002/api
 ###∫
 ### Production si el acceso a los datos es por el endpoint
 ###
-REACT_APP_API_URL=https://api.hostregio.app/api
+#REACT_APP_API_URL=https://api.hostregio.app/api
 #
 REACT_APP_APP_EMPRESA_ID=1
 REACT_APP_SECRET_KEY=parangacutirimiricuaror
