--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "axios": "^1.9.0",
         "bcrypt": "^5.1.1",
         "cloudinary": "^2.3.0",
         "cors": "^2.8.5",
@@ -24,6 +25,7 @@
         "moment-timezone": "^0.5.46",
         "multer": "^1.4.5-lts.1",
         "mysql2": "^3.10.2",
+        "request-ip": "^3.3.0",
         "sharp": "^0.33.4"
     },
     "devDependencies": {
