feat: Add services for Cartera, Landing, Settings, and Usuario models
- Implemented getting and posting clients in Cartera.service.js
- Added multiple landing page update functions in Landing.service.js
- Created menu and role management functions in Settings.service.js
- Developed user-related functions in Usuario.model.js for fetching and updating user data

--- a/backend/.env
+++ b/backend/.env
@@ -22,4 +22,8 @@ CLOUDINARY_API_KEY='778763934991892'
 CLOUDINARY_API_SECRET='bPPu6qPoKNgRwLZmRYWjLqzXBgo'
 FRONT_APP_SECRET_KEY=parangacutirimiricuaror
 JWT_SECRET=parangacutirimiricuaror
+#
+# Google AI studio
+#
+GOOGLE_API_KEY='AIzaSyDlrOmJ1OJ2343o2JPpJgCCUCuAqd-8oGE'
 
