--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@google/generative-ai": "^0.24.1",
         "axios": "^1.9.0",
         "bcrypt": "^5.1.1",
         "cloudinary": "^2.3.0",
