--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
         "dotenv": "^16.4.5",
         "formik": "^2.4.6",
         "html-react-parser": "^5.1.10",
+        "imagetracerjs": "^1.2.6",
         "immer": "^10.1.1",
         "jodit-react": "^4.1.2",
         "jwt-decode": "^4.0.0",
